<resources>
    <string name="app_name">e-USP</string>
    <string name="toolbar_profile_change_btn_description">Trocar Perfil</string>
    <string name="toolbar_settings_btn_description">Configurações</string>
    <string name="toolbar_refresh_btn_description">Atualizar Informações</string>
    <string name="toolbar_search_btn_description">Pesquisar</string>
    <string name="shortcut_qrcode_label">Código QR</string>
    <string name="shortcut_barcode_label">C. Barras</string>
    <string name="shortcut_code_disabled_msg">Você não está logado :(</string>
    <string name="btm_nav_bandejao">Bandejão</string>
    <string name="btm_nav_account_balance">Saldo</string>
    <string name="btm_nav_eCard">e-Card</string>
    <string name="btm_nav_library">Biblioteca</string>
    <string name="transition_to_settings_main" translatable="false">transition_to_settings_main</string>
    <string name="transition_to_login_main" translatable="false">transition_to_login_main</string>
    <string name="settings_title">Configurações</string>
    <string name="settings_account_logout">Logout</string>
    <string name="settings_account_title">Sua conta</string>
    <string name="settings_account_description">%1$s (%2$s)</string>
    <string name="settings_account_icon_description">@string/settings_account_title</string>
    <string name="settings_account_not_logged_in">Você não está logado</string>
    <string name="prefs_category_more_info">Informações adicionais</string>
    <string name="prefs_qr_code_update_title">Atualização diária do QR code</string>
    <string name="prefs_qr_code_update_key" translatable="false">qr_code_update</string>
    <string name="prefs_qr_code_update_entry_wifi">Apenas no Wi-Fi</string>
    <string name="prefs_qr_code_update_entry_any_connection">Wi-Fi ou dados móveis</string>
    <string name="prefs_qr_code_update_entry_deactivated">Desativado</string>
    <string name="prefs_qr_code_update_default_value" translatable="false">@string/prefs_qr_code_update_value_wifi</string>
    <string name="prefs_qr_code_update_value_wifi" translatable="false">1</string>
    <string name="prefs_qr_code_update_value_any_connection" translatable="false">2</string>
    <string name="prefs_qr_code_update_value_deactivated" translatable="false">3</string>
    <string name="prefs_ui_mode_title">Tema</string>
    <string name="prefs_ui_mode_key" translatable="false">ui_mode</string>
    <string name="prefs_ui_mode_entry_system">Seguir sistema</string>
    <string name="prefs_ui_mode_entry_light">Claro</string>
    <string name="prefs_ui_mode_entry_dark">Escuro</string>
    <string name="prefs_ui_mode_entry_time_of_day">Horário do dia</string>
    <string name="prefs_ui_mode_default_value" translatable="false">@string/prefs_ui_mode_value_system</string>
    <string name="prefs_ui_mode_value_system" translatable="false">1</string>
    <string name="prefs_ui_mode_value_light" translatable="false">2</string>
    <string name="prefs_ui_mode_value_dark" translatable="false">3</string>
    <string name="prefs_ui_mode_value_time_of_day" translatable="false">4</string>
    <string name="prefs_privacy_key" translatable="false">privacy</string>
    <string name="prefs_privacy_title">Privacidade e dados</string>
    <string name="prefs_privacy_summary">Sua privacidade é nossa prioridade. Saiba mais sobre que informações coletamos.</string>
    <string name="prefs_privacy_url" translatable="false">https://google.com/privacy</string>
    <string name="prefs_libraries_key" translatable="false">libraries</string>
    <string name="prefs_libraries_title">Bibliotecas de código aberto</string>
    <string name="prefs_libraries_summary">Veja o trabalho dos gigantes que permitiu o nosso.</string>
    <string name="prefs_libraries_url" translatable="false">https://google.com/libraries</string>
    <string name="prefs_feedback_key" translatable="false">feedback</string>
    <string name="prefs_feedback_title">Feedback</string>
    <string name="prefs_feedback_summary">Gostou? Odiou? Conta pra gente! Suas sugestões nos ajudam a melhorar.</string>
    <string name="prefs_feedback_url" translatable="false">https://google.com/feedback</string>
    <string name="prefs_about_key" translatable="false">about</string>
    <string name="prefs_about_title">Sobre</string>
    <string name="prefs_about_summary">Projeto open-source feito por uspianos para uspianos. Conheça a página no GitHub.</string>
    <string name="prefs_about_url" translatable="false">https://google.com/about</string>
    <string name="login_title">Login</string>
    <string name="login_state_waiting_request_token_retry">Não deu certo obter a credenciais da solicitação :(\n Tentaremos de novo em alguns segundos</string>
    <string name="login_state_waiting_access_token_retry">Não deu certo obter as suas informações :(\n Tentaremos de novo em alguns segundos</string>
    <string name="login_state_fetching_auth_url">Carregando o url do login</string>
    <string name="login_state_fetching_access_token">Quase lá!\nCarregando suas credenciais e informações</string>
    <string name="login_card_title">Faça seu login :D</string>
    <string name="login_card_button">Entrar com USP</string>
    <string name="login_card_description">Acesse seu saldo e carteirinha com total segurança!</string>
    <string name="bandejao_title">Cardápio</string>
    <string name="bandejao_lunch">Almoço</string>
    <string name="bandejao_lunch_calories">Almoço (%1$s kcal)</string>
    <string name="bandejao_dinner">Janta</string>
    <string name="bandejao_dinner_calories">Janta (%1$s kcal)</string>
    <string name="bandejao_content_empty">Refeição não encontrada :(</string>
    <string name="bandejao_dropdown_description">Selecionar Restaurantes</string>
    <string name="restaurant_list_title">Selecione seu Bandejão</string>
    <string name="restaurant_list_info_btn_description">Ver informações do bandejão</string>
    <string name="restaurant_info_thumbnail_description">Foto do restaurante</string>
    <string name="restaurant_info_hours_weekdays">Segunda-sexta: %1$s</string>
    <string name="restaurant_info_hours_saturday">Sábado: %1$s</string>
    <string name="restaurant_info_hours_sunday">Domingo: %1$s</string>
    <string name="restaurant_info_hours_title">Horários</string>
    <string name="restaurant_info_location_title">Endereço</string>
    <string name="restaurant_info_selling_point_title">Pontos de venda</string>
    <string name="restaurant_info_phone_title">Telefone</string>
    <string name="saldo_title">Saldo Bandeco</string>
    <string name="saldo_deposit_title">Quanto você quer\ndepositar?</string>
    <string name="saldo_deposit_button">Gerar Boleto</string>
    <string name="saldo_deposit_edit_text_init" translatable="false">0,00</string>
    <string name="saldo_reais_template" translatable="false">R$%1$s</string>
    <string name="saldo_reais_title_template" >Saldo: R$%1$s</string>
    <string name="saldo_boleto_ongoing">O boleto de depósito de\nR$ %1$s está em aberto</string>
    <string name="saldo_boleto_copy_code">Copiar Código</string>
    <string name="saldo_boleto_code_copied">Código Copiado</string>
    <string name="saldo_boleto_delete">Cancelar Boleto</string>
    <string name="saldo_boleto_expiration_date">Valido até %1$s</string>
    <string name="saldo_deposit_input_range">Digite um valor entre R$ 20,00 e R$ 200,00</string>
    <string name="card_title">e-Card</string>
    <string name="card_ecard_profile_pic_content_description">Foto de perfil da carteirinha</string>
    <string name="card_ecard_usp_logo_content_description">Logo da USP</string>
    <string name="card_ecard_usp_logo_subtitle">Universidade de São Paulo</string>
    <string name="card_ecard_expiration_date">Validade\n%1$s</string>
    <string name="card_qrcode_title">Código QR</string>
    <string name="card_qrcode_content_description">@string/card_qrcode_title</string>
    <string name="card_qrcode_refresh_btn">Recarregar</string>
    <string name="card_barcode_title">Código de Barras</string>
    <string name="card_barcode_content_description">@string/card_barcode_title</string>
    <string name="card_barcode_code">Número USP: %1$s</string>
    <string name="card_qrcode_expiration_date_msg_today_valid">Dados válidos\nExpira hoje às %1$s</string>
    <string name="card_qrcode_expiration_date_msg_future_valid">Dados válidos\nExpira dia %1$s às %2$s</string>
    <string name="card_qrcode_expiration_date_msg_invalid">Dados inválidos\nExpirou dia %1$s às %2$s</string>
    <string name="card_qrcode_expiration_date_state_invalid_successful">Dados inválidos</string>
    <string name="card_qrcode_expiration_date_state_invalid_loading">Dados inválidos\nAtualizando…</string>
    <string name="card_qrcode_expiration_date_state_invalid_error">Dados inválidos\nErro ao carregar, tentaremos novamente em 10s</string>
    <string name="card_qrcode_toast_unavailable">O código QR ainda não foi carregado :(</string>
    <string name="library_title">Biblioteca</string>
    <string name="library_no_authors">(Sem autor)</string>
    <string name="library_loan_title">Seus empréstimos</string>
    <string name="library_loan_renew_all">Renovar tudo</string>
    <string name="library_loan_empty">Nenhum empréstimo :(</string>
    <string name="library_loan_renew">Renovar Empréstimos</string>
    <string name="library_loan_due_date">Vence em %1s</string>
    <string name="library_reservation_title">Suas reservas</string>
    <string name="library_reservation_empty">Nenhuma reserva :(</string>
    <string name="library_reservation_cancel">Cancelar Reserva</string>
    <string name="library_reservation_hold_seq">%1sº na fila</string>
    <string name="library_history_title">Seu histórico</string>
    <string name="library_history_view_all">Visualizar</string>
    <string name="library_history_empty">Histórico vazio :(</string>
    <string name="library_history_return_date">Devolvido em %1s</string>
    <string name="search_app">Pesquisar no SIBI USP</string>
    <string name="search_no_matches">No matches for “%1s”</string>
    <string name="search_no_matches_retry">Try broadening your search</string>
    <string name="search_count">%1d items</string>
    <string name="label_add">Add to cart</string>
    <string name="label_search">Perform search</string>
    <string name="label_back">Retornar</string>
    <string name="label_clear">Limpar</string>
    <string name="search_suggestions_recent">Pesquisas recentes</string>
    <string name="filter_label">Filtro</string>
    <string name="filter_location">Local</string>
    <string name="filter_search_type">Buscar por</string>
    <string name="filter_material_type">Tipo de material</string>
    <string name="search_no_author">Autoria não informada</string>
</resources>